:Copyright: This document has been placed in the public domain.

.. contents::

2019-07-23 : Branch: branches/rel-0.15 created to investigate import problems: bugs#366

Changes Since 0.16
==================

* General

  - Explicit include test subdirectory contents in MANIFEST.in to avoid
    inclusion of test outputs.
  - Fix [ 385 ]: Import of language modules.

* docutils/__init__.py

  - VersionInfo: ValueError for invalid values, fix comparison to tuples.

* docutils/utils/smartquotes.py

  - Fix [ 383 ]: Smart quotes around opening and separator characters.
  
* docutils/writers/html5_polyglot/

  - Use the new semantic tags <main>, <section>, <header>,
    <footer>, <aside>, <figure>, and <figcaption>.
    See ``minimal.css`` and ``plain.css`` for styling rule examples.

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.

  - Use HTML tags <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

Release 0.16
============

* General

  - Dropped support for Python 2.6, 3.3 and 3.4
  - Docutils now supports Python 2.7 and Python 3.5+ natively
    (without conversion by ``2to3``).
  - Keep `backslash escapes`__ in the document tree. Backslash characters in
    text are be represented by NULL characters in the ``text`` attribute of
    Doctree nodes and removed in the writing stage by the node's
    ``astext()`` method.

  __ http://docutils.sourceforge.net/docs/ref/rst/restructuredtext.html#escaping-mechanism

* docutils/io.py

  - Remove the `handle_io_errors` option from io.FileInput/Output.

* docutils/nodes.py

  - Speed up Node.next_node().
  - If `auto_id_prefix`_ ends with "%", this is replaced with the tag name.
  - Warn about Node.traverse() returning an iterator instead of a list
    in future.

  .. _auto_id_prefix: docs/user/config.html#auto-id-prefix
